k8s/apphelmcharts/templates/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata: 
  name: version1

---

apiVersion: v1
kind: Namespace
metadata: 
  name: version2

---
