k8s/apphelmcharts/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: version1-service
  namespace: version1
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
  selector:
    app: app-version1
